# Lab2_var25

./: .gitignore  CMakeLists.txt  LinkedList.h  main.cpp
